--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="google-site-verification" content="R-xDMV1rwsCmJfs2kfUM5jqUYbShAVLYOKPWxL6UnYg" />
   <title>Ali - iPortfolio Bootstrap </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
